--- a/yatube/templates/posts/groups_list.html
+++ b/yatube/templates/posts/groups_list.html
@@ -1,4 +1,4 @@
-{% extends "base.html" %}
+{% extends "posts/base.html" %}
 {% block title %}Список сообществ {% endblock %}
 {% block header %}Сообщества{% endblock %}
 {% block description %} {% endblock %}
