--- a/yatube/users/templates/registration/password_reset_done.html
+++ b/yatube/users/templates/registration/password_reset_done.html
@@ -1,4 +1,4 @@
-{% extends "base.html" %}
+{% extends "posts/base.html" %}
 {% block title %}Ссылка на восстановление пароля отправлена{% endblock %}
 
 {% block content %}
