--- a/yatube/templates/posts/base.html
+++ b/yatube/templates/posts/base.html
@@ -13,7 +13,7 @@
   </head>
 
   <body>
-    {% include 'includes/nav.html' %}
+    {% include 'posts/includes/nav.html' %}
     <main>
       <div class="container">
         <h1>{% block header %}The Last Social Media You'll Ever Need{% endblock %}</h1>
@@ -38,7 +38,7 @@
           
       </div>
     </main>
-  {% include 'includes/footer.html' %}
+  {% include 'posts/includes/footer.html' %}
   </body>
 
 </html> 
