--- a/yatube/templates/posts/post_edit.html
+++ b/yatube/templates/posts/post_edit.html
@@ -1,3 +1,3 @@
-{% extends "new_post.html" %}
+{% extends "posts/new_post.html" %}
 {% block post_titile %}Изменить пост{% endblock %}
 {% block button %}Отредактировать{% endblock %}
