add comment and image in post

--- a/yatube/templates/posts/index.html
+++ b/yatube/templates/posts/index.html
@@ -1,4 +1,4 @@
-{% extends "posts/base.html" %}
+{% extends "base.html" %}
 {% block title %}Последние обновления на сайте{% endblock %}
 {% block header %}
 <a href="{% url 'group_list' %}">Список сообществ</a><br>
