--- a/yatube/templates/posts/profile.html
+++ b/yatube/templates/posts/profile.html
@@ -1,4 +1,4 @@
-{% extends "posts/base.html" %}
+{% extends "base.html" %}
 {% block title %}Профиль {{ user_post.username }}{% endblock %}
 {% block header %}{% endblock %}
 {% block description %}{% endblock %}
