--- a/yatube/templates/posts/users_list.html
+++ b/yatube/templates/posts/users_list.html
@@ -1,4 +1,4 @@
-{% extends "posts/base.html" %}
+{% extends "base.html" %}
 {% block title %}Список пользователей {% endblock %}
 {% block header %}Пользователи{% endblock %}
 {% block description %} {% endblock %}
