--- a/yatube/templates/posts/group.html
+++ b/yatube/templates/posts/group.html
@@ -1,16 +1,11 @@
-{% extends "posts/base.html" %}
+{% extends "base.html" %}
 {% block title %}Записи сообщества {{ group.title }}{% endblock %}
 {% block header %}{{ group.title }}{% endblock %}
 {% block description %}{{ group.description }}{% endblock %}
 {% block content %}
-
-{% for post in page %}
-<h3>
-  Автор: {{ post.author.get_full_name }}, Дата публикации: {{ post.pub_date|date:"d M Y" }}
-</h3>
-<p>{{ post.text|linebreaksbr }}</p>
-{% if not forloop.last %}<hr>{% endif %}
-{% endfor %}
-{% include "posts/includes/paginator.html" %}
-  <br><br><h3><a href=".">Список сообществ</a></h3>
+  {% for post in page %}
+  {% include 'posts/includes/post_card.html' %}
+  {% endfor %}
+  {% include "posts/includes/paginator.html" %}
+  
 {% endblock %} 
